--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./weather.css">
-    <title>React App</title>
+    <title>Weather</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
